...
    <item
        android:id="@+id/menuOrdenButton"
        android:icon="@drawable/sort"
        android:title="Orden"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuFilterButton"
        android:icon="@drawable/filter"
        android:title="Filtros"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
...
