...
        android:id="@+id/etLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Localidad" />

    <CheckBox
        android:id="@+id/cbAbierto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Abierto" />
</LinearLayout>
