...
        android:paddingBottom="8dp"
        android:text="@string/compania"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spnCompanhia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingBottom="12dp" />

    <TextView
...
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvListaCombustibles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ivArrow"
            android:layout_alignParentStart="true"
            android:paddingStart="8dp"
            android:text="@string/selecciona_combustibles"
            android:textSize="16sp"
            android:ellipsize="end"
            android:singleLine="false"
...
