<resources>
    <string name="app_name">Gasolineras</string>
    <string name="gasolina95E5label">Gasolina95E5</string>
    <string name="gasolina95E5Premlabel">Gasolina95E5Premium</string>
    <string name="gasolina95E10label">Gasolina95E10</string>
    <string name="gasolina98E5label">Gasolina98E5</string>
    <string name="gasolina98E10label">Gasolina98E10</string>
    <string name="dieselAlabel">Diesel</string>
    <string name="gasolina98label">Gasolina98</string>
    <string name="biolabel">Biodiesel</string>
    <string name="refresh">Recargar</string>
    <string name="info">Info</string>
    <string name="loadCorrect">Se han cargado %d gasolineras</string>
    <string name="loadError">Ha habido un error cargando las gasolineras</string>
    <string name="info_text">Aplicación creada para el Proyecto Integrado Curso 2024-2025</string>
    <string name="slider_desc" />
    <string name="selecciona_combustibles">Selecciona combustibles</string>
    <string name="precio_gasolina">Precio Gasolina:</string>
    <string name="precio_diesel">Precio Diesel:</string>
    <string name="precio_sumario">Precio Sumario:</string>
    <string name="rotulo">Rotulo:</string>
    <string name="municipio">Municipio:</string>
    <string name="provincia">Provincia:</string>
    <string name="horario">Horario:</string>
    <string name="nulo">Null</string>
    <string name="direccion">Dirección:</string>
    <string name="logotipo_gasolinera">Logotipo de la compañía</string>
    <string name="municipio_opcional">Municipio (opcional):</string>
    <string name="compania">Compañía:</string>
    <string name="combustible">Combustible:</string>
    <string name="abierto">Abierto</string>
    <string name="arrow_down">Arrow down</string>
    <string-array name="provincias_espana">
        <item>-</item>
        <item>ALBACETE</item>
        <item>ALICANTE</item>
        <item>ALMERÍA</item>
        <item>ARABA/ÁLAVA</item>
        <item>ASTURIAS</item>
        <item>ÁVILA</item>
        <item>BADAJOZ</item>
        <item>BALEARS (ILLES)</item>
        <item>BARCELONA</item>
        <item>BIZKAIA</item>
        <item>BURGOS</item>
        <item>CÁCERES</item>
        <item>CÁDIZ</item>
        <item>CANTABRIA</item>
        <item>CASTELLÓN / CASTELLÓ</item>
        <item>CEUTA</item>
        <item>CIUDAD REAL</item>
        <item>CÓRDOBA</item>
        <item>CORUÑA (A)</item>
        <item>CUENCA</item>
        <item>GIPUZKOA</item>
        <item>GIRONA</item>
        <item>GRANADA</item>
        <item>GUADALAJARA</item>
        <item>HUELVA</item>
        <item>HUESCA</item>
        <item>JAÉN</item>
        <item>LEÓN</item>
        <item>LLEIDA</item>
        <item>LUGO</item>
        <item>MADRID</item>
        <item>MÁLAGA</item>
        <item>MELILLA</item>
        <item>MURCIA</item>
        <item>NAVARRA</item>
        <item>OURENSE</item>
        <item>PALENCIA</item>
        <item>PALMAS (LAS)</item>
        <item>PONTEVEDRA</item>
        <item>RIOJA (LA)</item>
        <item>SALAMANCA</item>
        <item>SANTA CRUZ DE TENERIFE</item>
        <item>SEGOVIA</item>
        <item>SEVILLA</item>
        <item>SORIA</item>
        <item>TARRAGONA</item>
        <item>TERUEL</item>
        <item>TOLEDO</item>
        <item>VALENCIA / VALÈNCIA</item>
        <item>VALLADOLID</item>
        <item>ZAMORA</item>
        <item>ZARAGOZA</item>
    </string-array>

    <string-array name="lista_companhias">
        <item>-</item>
        <item>Repsol</item>
        <item>Cepsa</item>
        <item>Avia</item>
        <item>Carrefour</item>
        <item>Petronor</item>
        <item>Ballenoil</item>
        <item>Galp</item>
        <item>Shell</item>
        <item>Meroil</item>
        <item>Petroprix</item>
        <item>BP</item>
        <item>Otros</item>
    </string-array>

    <string-array name="lista_gasolinas">
        <item>Gasolina 95 E5</item>
        <item>Gasolina 95 E5 Premium</item>
        <item>Gasolina 95 E10</item>
        <item>Gasolina 98 E5</item>
        <item>Gasolina 98 E10</item>
    </string-array>

    <string-array name="lista_combustibles">
        <item>Gasóleo A</item>
        <item>Biodiesel</item>
        <item>Gasolina 95 E5</item>
        <item>Gasolina 95 E5 Premium</item>
        <item>Gasolina 95 E10</item>
        <item>Gasolina 98 E5</item>
        <item>Gasolina 98 E10</item>
    </string-array>

    <string-array name="lista_orden">
        <item>Ascendente</item>
        <item>Descendente</item>
    </string-array>
</resources>

